--- a/setuper web app/templates/index.html
+++ b/setuper web app/templates/index.html
@@ -1,180 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/static/favicon.png">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/flat-ui.css" rel="stylesheet">
-    <script src="static/js/app/require-setup.js"></script>
-    <script data-main="../static/js/index" src="static/js/lib/require.min.js"></script>
-    <style type="text/css">
-    html,
-    body {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-    }
-    div#header {
-        height: 10%;
-    }
-    div#container {
-        height: 1000px;
-    }
-    div #left {
-        width: 30%;
-        height: 100%;
-        float: left;
-    }
-    div#center {
-        width: 40%;
-        height: 100%;
-        float: left;
-    }
-    div #right {
-        width: 30%;
-        height: 100%;
-        float: right;
-    }
-    div #content {
-        width: 100%;
-        height: 100%;
-        margin-top: 4%;
-        margin-left: 4%;
-        margin-right: 4%;
-    }
-    div#footer {
-        height: 10%;
-    }
-    div .form-group>label {
-        color: white;
-        width: 200px;
-    }
-    </style>
-    <link href="../static/css/uploadfile.css" rel="stylesheet">
-    <title>{{ title }}</title>
-</head>
+{% block Dropmenu %}
+    </li>
+        <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Action</a>
+            </li>
+            <li><a href="#">Another action</a>
+            </li>
+            <li><a href="#">Something else here</a>
+            </li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Nav header</li>
+            <li><a href="#">Separated link</a>
+            </li>
+            <li><a href="#">One more separated link</a>
+            </li>
+        </ul>
+    </li>
+{% end %}
 
-<body>
-    <div id="header">
-        <!-- Static navbar -->
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                    </button>
-                    <a class="navbar-brand" href="#">Cloud Setuper</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a>
-                        </li>
-                        <li><a href="#about">About</a>
-                        </li>
-                        <li><a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="/login">Sign in</a>
-                        </li>
-                        <li><a href="/join">Sign up</a>
-                        </li>
-                            <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a>
-                                </li>
-                                <li><a href="#">Another action</a>
-                                </li>
-                                <li><a href="#">Something else here</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a>
-                                </li>
-                                <li><a href="#">One more separated link</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+{% block left %}
+    <form id="upload" method="post" action="/upload" enctype="multipart/form-data">
+        <div id="drop">
+            Drop Here
+            <a>Browse</a>
+            <input type="file" name="upl" multiple="">
+        </div>
+        <ul>
+        </ul>
+        <div id="uploadtip" style="height: 20px; margin-top: 10px; display: none">
+            <p style="color: red"></p>
+        </div>
+    </form>
+{% end %}
 
-                <!--/.nav-collapse -->
+{% block center %}
+    <form name="setup_form" id="setup_form">
+        <div class="login-form" style="background-color: #1abc9c">
+            <div class="form-group">
+                <label>程序名称：</label>
+                <input type="text" class="form-control login-field " value="" placeholder="Enter your software name" required="required" name="softwarename" id="software-name">
+            </div>
+
+            <div class="form-group">
+                <label>程序版本号：</label>
+                <input type="text" class="form-control login-field " value="" placeholder="Enter your software version" required="required" name="softwareversion" id="software-version">
+            </div>
+
+            <div class="form-group">
+                <label>程序作者：</label>
+                <input type="text" class="form-control login-field" value="" placeholder="Enter your author name" required="required" name="authorname" id="software-author">
+            </div>
+
+            <div class="form-group">
+                <label>email地址：</label>
+                <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="software-email">
+            </div>
+
+            <div class="form-group">
+                <label>公司名称：</label>
+                <input type="text" class="form-control login-field" value="" placeholder="Enter your comanpy name" required="required" name="companyname" id="software-company">
+            </div>
+
+            <div class="form-group">
+                <label>是否显示主程序进度条：</label>
+                <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="main_progressbar" />
+            </div>
+
+            <div class="form-group">
+                <label>是否显示任务栏进度条：</label>
+                <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="taskbar_progressbar" />
+            </div>
+
+            <div class="form-group">
+                <label>是否生成桌面快捷方式：</label>
+                <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="desktoplink" />
+            </div>
+
+            <a id="onesetup" class="btn btn-block btn-lg btn-success">一键生成</a>
+        </div>
+    </form>
+    <div id="tipmessage" style="margin-top: 20px; margin-left: 25%; margin-right: 25%">
+        <p style="color: red"></p>
+    </div>
+{% end %}
+
+{% block footer %}
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-8">
+                dfdf
+            </div>
+            <div class="col-xs-4">
+                dfdf
             </div>
         </div>
     </div>
-    <div id="container">
-        <div id="left"></div>
-        <div id="center">
-            <form id="upload" method="post" action="/upload" enctype="multipart/form-data">
-                <div id="drop">
-                    Drop Here
-                    <a>Browse</a>
-                    <input type="file" name="upl" multiple="">
-                </div>
-                <ul>
-                </ul>
-            </form>
-
-
-
-            <form name="setup_form" id="setup_form">
-                <div class="login-form" style="margin-top: 4%; background-color: #1abc9c">
-                    <div class="form-group">
-                        <label>程序名称：</label>
-                        <input type="text" class="form-control login-field " value="" placeholder="Enter your software name" required="required" name="softwarename" id="software-name">
-                    </div>
-
-                    <div class="form-group">
-                        <label>程序版本号：</label>
-                        <input type="text" class="form-control login-field " value="" placeholder="Enter your software version" required="required" name="softwareversion" id="software-version">
-                    </div>
-
-                    <div class="form-group">
-                        <label>程序作者：</label>
-                        <input type="text" class="form-control login-field" value="" placeholder="Enter your author name" required="required" name="authorname" id="software-author">
-                    </div>
-
-                    <div class="form-group">
-                        <label>email地址：</label>
-                        <input type="email" class="form-control login-field" value="" placeholder="Enter your email" required="required" name="email" id="software-email">
-                    </div>
-
-                    <div class="form-group">
-                        <label>公司名称：</label>
-                        <input type="text" class="form-control login-field" value="" placeholder="Enter your comanpy name" required="required" name="companyname" id="software-company">
-                    </div>
-
-                    <div class="form-group">
-                        <label>是否显示主程序进度条：</label>
-                        <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="main_progressbar" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>是否显示任务栏进度条：</label>
-                        <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="taskbar_progressbar" />
-                    </div>
-
-                    <div class="form-group">
-                        <label>是否生成桌面快捷方式：</label>
-                        <input type="checkbox" checked data-toggle="switch" data-on-color="success" data-off-color="warning" id="desktoplink" />
-                    </div>
-
-                    <a id="onesetup" class="btn btn-block btn-lg btn-success">一键生成</a>
-                </div>
-            </form>
-            <div id="tipmessage" style="margin-top: 20px; margin-left: 25%; margin-right: 25%">
-                <p style="color: red"></p>
-            </div>
-
-        </div>
-        <div id="right"></div>
-    </div>
-    <div id="footer"></div>
-</body>
-
-</html>
+{% end %}
