--- a/setuper web app/templates/login.html
+++ b/setuper web app/templates/login.html
@@ -1,158 +1,33 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/static/favicon.png">
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/flat-ui.css" rel="stylesheet">
-    <script src="static/js/app/require-setup.js"></script>
-    <script data-main="../static/js/login" src="static/js/lib/require.min.js"></script>
-    <style type="text/css">
-    html,
-    body {
-        /* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
-        /* IE10 Consumer Preview */
-        
-        background-image: -ms-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-        /* Mozilla Firefox */
-        
-        background-image: -moz-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-        /* Opera */
-        
-        background-image: -o-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-        /* Webkit (Safari/Chrome 10) */
-        
-        background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #4D9AFF), color-stop(1, #1CFF49));
-        /* Webkit (Chrome 11+) */
-        
-        background-image: -webkit-linear-gradient(top left, #4D9AFF 0%, #1CFF49 100%);
-        /* W3C Markup, IE10 Release Preview */
-        
-        background-image: linear-gradient(to bottom right, #4D9AFF 0%, #1CFF49 100%);
-        height: 100%;
-        width: 100%;
-        margin: 0;
-    }
-    div#header {
-        height: 10%;
-    }
-    div#container {
-        height: 80%;
-    }
-    div #left {
-        width: 20%;
-        height: 100%;
-        float: left;
-    }
-    div#center {
-        background-image: url(../static/img/login/imac.png);
-        -moz-background-size: 100% 100%;
-        background-size: 100% 100%;
-        width: 60%;
-        height: 100%;
-        float: left;
-    }
-    div #right {
-        width: 20%;
-        height: 100%;
-        float: right;
-    }
-    div #content {
-        width: 100%;
-        height: 100%;
-        margin-top: 4%;
-        margin-left: 4%;
-        margin-right: 4%;
-    }
-    div#footer {
-        height: 10%;
-    }
-    </style>
-    <title>{{ title }}</title>
-</head>
+{% block appcss %}
+<link href="../static/css/login.css" rel="stylesheet">
+{% end %}
 
-<body>
-        <div id="header">
-        <!-- Static navbar -->
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                    </button>
-                    <a class="navbar-brand" href="#">Cloud Setuper</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a>
-                        </li>
-                        <li><a href="#about">About</a>
-                        </li>
-                        <li><a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="/login">Sign in</a>
-                        </li>
-                        <li><a href="/join">Sign up</a>
-                        </li>
-                            <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a>
-                                </li>
-                                <li><a href="#">Another action</a>
-                                </li>
-                                <li><a href="#">Something else here</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a>
-                                </li>
-                                <li><a href="#">One more separated link</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+{% block appjs %}
+<script data-main="../static/js/login" src="static/js/lib/require.min.js"></script>
+{% end %}
 
-                <!--/.nav-collapse -->
-            </div>
-        </div>
-    </div>
-    <div id="container">
-        <div id="left"></div>
-        <div id="center">
-            <div class="login" style="background-image: none">
-                <form name="user_form" id="user_form">
-                    <div class="login-form" style="margin-left: 25%;margin-right: 25%; margin-top: 8%;">
-                        <div class="form-group">
-                            <input type="text" class="form-control login-field" value="" placeholder="Enter your name" required="required" name="username" id="login-name">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
+{% block center %}
+	<div class="login" style="background-image: none">
+	    <form name="user_form" id="user_form">
+	        <div class="login-form" style="margin-left: 25%;margin-right: 25%; margin-top: 8%;">
+	            <div class="form-group">
+	                <input type="text" class="form-control login-field" value="" placeholder="Enter your name" required="required" name="username" id="login-name">
+	                <label class="login-field-icon fui-user" for="login-name"></label>
+	            </div>
 
-                        <div class="form-group">
-                            <input type="password" class="form-control login-field" value="" placeholder="Password" required="required" name="password" id="login-pass">
-                            <label class="login-field-icon fui-lock" for="login-pass"></label>
-                        </div>
+	            <div class="form-group">
+	                <input type="password" class="form-control login-field" value="" placeholder="Password" required="required" name="password" id="login-pass">
+	                <label class="login-field-icon fui-lock" for="login-pass"></label>
+	            </div>
 
-                        <input id="login" class="btn btn-primary btn-lg btn-block" value="login"/>
-                        <a id="lostpassword" class="login-link" href="#">Lost your password?</a>
-                    </div>
-                </form>
-                <div id="tipmessage" style="margin-top: 20px; margin-left: 25%; margin-right: 25%">
-                    <p style="color: red"></p>
-                </div>
-            </div>
-            
-        </div>
-        <div id="right"></div>
-    </div>
-    <div id="footer"></div>
-</body>
-
-</html>
+	            <input id="login" class="btn btn-primary btn-lg btn-block" value="login"/>
+	            <a id="lostpassword" class="login-link" href="#">Lost your password?</a>
+	        </div>
+	    </form>
+	    <div id="tipmessage" style="margin-top: 20px; margin-left: 25%; margin-right: 25%">
+	        <p style="color: red"></p>
+	    </div>
+	</div>
+{% end %}
